# open-fvs-mirror

./: CMakeLists.txt  CMakeLists.txt.in  appveyor.yml  readme.md
doc/: mirror_trunk.md
docs/: mirror_notes.md
tests/qFVSie/: ie.db_dump.txt.save  ie.key
tests/qFVSsn/: snout.txt.save
